<resources>
    <string name="app_name">TheGameShip</string>
    <string name="back">Back</string>
    <string name="difficulty">Difficulty</string>
    <string name="directionLeft">LEFT</string>
    <string name="directionRight">RIGHT</string>
    <string name="leaderboard">Leader Board</string>
    <string name="play_game">Play</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="volume">Volume</string>
    <string name="end_game">end game</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

</resources>