<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".view.scores">

    <ImageView
        android:id="@+id/imageBackGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:srcCompat="@drawable/background_phone_format" />

    <TextView
        android:id="@+id/LeaderBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/leaderboard"
        android:textColor="@color/white"
        android:textSize="@dimen/main_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHUD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:textColor="@color/white"
        android:textSize="@dimen/sub_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LeaderBoard" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scoresRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHUD" />

    <Button
        android:id="@+id/buttonEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewHUD"
        app:layout_constraintEnd_toStartOf="@+id/buttonMedium"
        app:layout_constraintTop_toBottomOf="@+id/LeaderBoard" />

    <Button
        android:id="@+id/buttonMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/medium"
        app:layout_constraintBottom_toTopOf="@+id/textViewHUD"
        app:layout_constraintTop_toBottomOf="@+id/LeaderBoard"
        tools:layout_editor_absoluteX="157dp" />

    <Button
        android:id="@+id/buttonHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/hard"
        app:layout_constraintBottom_toTopOf="@+id/textViewHUD"
        app:layout_constraintStart_toEndOf="@+id/buttonMedium"
        app:layout_constraintTop_toBottomOf="@+id/LeaderBoard" />

</androidx.constraintlayout.widget.ConstraintLayout>