<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.MainActivity">

    <ImageView
        android:id="@+id/imageBackGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/mainbg" />

    <TextView
        android:id="@+id/GameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/main_logo"
        app:layout_constraintBottom_toTopOf="@+id/nicknameTextInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nicknameTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button_left_and_right"
        android:layout_marginEnd="@dimen/margin_button_left_and_right"
        android:layout_marginBottom="@dimen/margin_top_and_bottom"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Tap to enter a name" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button_left_and_right"
        android:layout_marginEnd="@dimen/margin_button_left_and_right"
        android:layout_marginBottom="@dimen/margin_top_and_bottom"
        android:text="@string/play_game"
        app:layout_constraintBottom_toTopOf="@+id/buttonLeaderBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/buttonLeaderBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button_left_and_right"
        android:layout_marginEnd="@dimen/margin_button_left_and_right"
        android:text="@string/leaderboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button_left_and_right"
        android:layout_marginTop="@dimen/margin_top_and_bottom"
        android:layout_marginEnd="@dimen/margin_button_left_and_right"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLeaderBoard" />

    <Button
        android:id="@+id/buttonTestEndGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button_left_and_right"
        android:layout_marginTop="@dimen/margin_top_and_bottom"
        android:layout_marginEnd="@dimen/margin_button_left_and_right"
        android:text="@string/play_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>